
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {struct device* parent; } ;
struct platform_device {TYPE_1__ dev; } ;
struct device {int dummy; } ;


 int ENOMEM ;
 struct platform_device* ERR_PTR (int) ;
 int platform_device_add (struct platform_device*) ;
 int platform_device_add_data (struct platform_device*,void const*,size_t) ;
 struct platform_device* platform_device_alloc (char const*,int) ;
 int platform_device_put (struct platform_device*) ;

struct platform_device *platform_device_register_data(
  struct device *parent,
  const char *name, int id,
  const void *data, size_t size)
{
 struct platform_device *pdev;
 int retval;

 pdev = platform_device_alloc(name, id);
 if (!pdev) {
  retval = -ENOMEM;
  goto error;
 }

 pdev->dev.parent = parent;

 if (size) {
  retval = platform_device_add_data(pdev, data, size);
  if (retval)
   goto error;
 }

 retval = platform_device_add(pdev);
 if (retval)
  goto error;

 return pdev;

error:
 platform_device_put(pdev);
 return ERR_PTR(retval);
}
